[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/user_interface/statesUI/StateInitialUI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Orkney/Orkney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/user_interface/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/user_interface/statesUI/StateUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/InitialMenuUI/configButton_Pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/art/InitialMenuUI/levelSelectUIButton_Pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/art/InitialMenuUI/configButton.png" type="Texture" id=7]
[ext_resource path="res://assets/art/InitialMenuUI/freeModeUIButton_Pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/art/InitialMenuUI/playButton_Pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/art/InitialMenuUI/freeModeUIButton.png" type="Texture" id=10]
[ext_resource path="res://assets/art/InitialMenuUI/playButton.png" type="Texture" id=11]
[ext_resource path="res://assets/art/InitialMenuUI/levelSelectUIButton.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 132
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="StateInitialUI" instance=ExtResource( 4 )]
script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 3 )]

[node name="PlayBt" type="TextureButton" parent="." index="1"]
margin_left = 1006.78
margin_top = 476.0
margin_right = 1409.78
margin_bottom = 897.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectBt" type="TextureButton" parent="." index="2"]
margin_left = 585.0
margin_top = 474.0
margin_right = 832.0
margin_bottom = 721.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreeModeBt" type="TextureButton" parent="." index="3"]
margin_left = 515.0
margin_top = 738.0
margin_right = 921.0
margin_bottom = 880.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreeModeBtLabel" type="Label" parent="FreeModeBt" index="0"]
margin_left = -3.0
margin_top = -2.0
margin_right = 405.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0666667, 0.176471, 0.305882, 1 )
text = "modo libre"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigBt" type="TextureButton" parent="." index="4"]
visible = false
margin_left = 1657.87
margin_top = 77.1937
margin_right = 1829.87
margin_bottom = 249.193
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="." index="5"]
margin_left = 278.0
margin_top = 42.0
margin_right = 1600.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0666667, 0.176471, 0.305882, 1 )
text = "Quantum Play: Circuit Tuner"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="." to="." method="_on_StateInitialUI_tree_entered"]
[connection signal="pressed" from="PlayBt" to="." method="toInGameClassicUI"]
[connection signal="pressed" from="LevelSelectBt" to="." method="toLevelSelectUI"]
[connection signal="pressed" from="FreeModeBt" to="." method="toInGameFreeUI"]
